--- a/simulations/.qtenvrc
+++ b/simulations/.qtenvrc
@@ -1,9 +1,9 @@
 [General]
-last-configname=UDP_VideoStream
+last-configname=UDP_VideoStream_4
 last-runnumber=0
 
 [RunModeProfiles]
-run-playback-speed=1
+run-playback-speed=5.011872336272722
 run-min-playback-speed=0.01
 run-max-playback-speed=100
 run-min-animation-speed=nan
