--- a/simulations/nclients.ini
+++ b/simulations/nclients.ini
@@ -1,5 +1,5 @@
 [General]
-network = WiredNetwork
+network = SwitchNetwork
 
 sim-time-limit = 3600s
 
@@ -16,65 +16,72 @@ sim-time-limit = 3600s
 **.videoServer.app[*].sendInterval = 1ms
 **.videoServer.app[*].packetLen = 1400B
 
-**.client1[*].numApps = 1
-**.client1[*].app[*].typename = "UdpVideoStreamClient"
-**.client1[*].app[*].serverAddress = "server"
-**.client1[*].app[*].serverPort = 1000
-
-**.client2[*].numApps = 1
-**.client2[*].app[*].typename = "UdpVideoStreamClient"
-**.client2[*].app[*].serverAddress = "server"
-**.client2[*].app[*].serverPort = 1000
-
-**.client3[*].numApps = 1
-**.client3[*].app[*].typename = "UdpVideoStreamClient"
-**.client3[*].app[*].serverAddress = "server"
-**.client3[*].app[*].serverPort = 1000
-
-**.client4[*].numApps = 1
-**.client4[*].app[*].typename = "UdpVideoStreamClient"
-**.client4[*].app[*].serverAddress = "server"
-**.client4[*].app[*].serverPort = 1000
 
 # Visualizer parameters
-*.visualizer.*.numDataLinkVisualizers = 2
+*.visualizer.*.numDataLinkVisualizers = 1
 *.visualizer.*.dataLinkVisualizer[*].displayLinks = true
 *.visualizer.*.dataLinkVisualizer[*].fadeOutMode = "simulationTime"
 *.visualizer.*.dataLinkVisualizer[*].holdAnimationTime = 5s
 *.visualizer.*.dataLinkVisualizer[*].packetFilter = "*VideoStrmPk*"
-*.visualizer.*.dataLinkVisualizer[0].activityLevel = "protocol"
-*.visualizer.*.dataLinkVisualizer[0].lineColor = "purple"
-*.visualizer.*.dataLinkVisualizer[0].labelColor = "purple"
-*.visualizer.*.dataLinkVisualizer[1].activityLevel = "service"
-*.visualizer.*.dataLinkVisualizer[1].lineColor = "green"
-*.visualizer.*.dataLinkVisualizer[1].labelColor = "green"
+*.visualizer.*.dataLinkVisualizer[0].activityLevel = "service"
+*.visualizer.*.dataLinkVisualizer[0].lineColor = "green"
+*.visualizer.*.dataLinkVisualizer[0].labelColor = "green"
 
 # Filtering data links between server and switches
-*.visualizer.*.dataLinkVisualizer[*].nodeFilter = "server or centerSwitch or etherSwitch{1,2,3,4}"
+#*.visualizer.*.dataLinkVisualizer[*].nodeFilter = "videoServer or centerSwitch or etherSwitch{1,2,3,4} or accessPoint{1,2,3,4}"
+
+
+[Config WiredNetwork]
+network = WiredNetwork
+
+**.client1[*].numApps = 1
+**.client1[*].app[*].typename = "UdpVideoStreamClient"
+**.client1[*].app[*].serverAddress = "videoServer"
+**.client1[*].app[*].serverPort = 1000
+
+**.client2[*].numApps = 1
+**.client2[*].app[*].typename = "UdpVideoStreamClient"
+**.client2[*].app[*].serverAddress = "videoServer"
+**.client2[*].app[*].serverPort = 1000
+
+**.client3[*].numApps = 1
+**.client3[*].app[*].typename = "UdpVideoStreamClient"
+**.client3[*].app[*].serverAddress = "videoServer"
+**.client3[*].app[*].serverPort = 1000
+
+**.client4[*].numApps = 1
+**.client4[*].app[*].typename = "UdpVideoStreamClient"
+**.client4[*].app[*].serverAddress = "videoServer"
+**.client4[*].app[*].serverPort = 1000
 
 [Config Wired_10]
+extends = WiredNetwork
 description = Wired Network with 10 clients
 
 **.n1 = 10
 
 [Config Wired_20]
+extends = WiredNetwork
 description = Wired Network with 20 clients
 
 **.n1 = 20
 
 [Config Wired_30]
+extends = WiredNetwork
 description = Wired Network with 30 clients
 
 **.n1 = 20
 **.n2 = 10
 
 [Config Wired_40]
+extends = WiredNetwork
 description = Wired Network with 40 clients
 
 **.n1 = 20
 **.n2 = 20
 
 [Config Wired_50]
+extends = WiredNetwork
 description = Wired Network with 50 clients
 
 **.n1 = 20
@@ -82,6 +89,7 @@ description = Wired Network with 50 clients
 **.n3 = 10
 
 [Config Wired_60]
+extends = WiredNetwork
 description = Wired Network with 60 clients
 
 **.n1 = 20
@@ -89,6 +97,7 @@ description = Wired Network with 60 clients
 **.n3 = 20
 
 [Config Wired_70]
+extends = WiredNetwork
 description = Wired Network with 70 clients
 
 **.n1 = 20
@@ -97,9 +106,139 @@ description = Wired Network with 70 clients
 **.n4 = 10
 
 [Config Wired_80]
+extends = WiredNetwork
 description = Wired Network with 80 clients
 
 **.n1 = 20
 **.n2 = 20
 **.n3 = 20
 **.n4 = 20
+
+[Config HybridNetworkScenario1]
+network = HybridNetworkScenario1
+
+**.addDefaultRoutes = false
+
+*.accessPoint1.numWlanInterfaces = 1
+*.accessPoint1.wlan[0].mgmt.ssid = "wlan2.41"
+*.accessPoint1.wlan[0].radio.displayCommunicationRange = false
+
+*.accessPoint2.numWlanInterfaces = 1
+*.accessPoint2.wlan[0].mgmt.ssid = "wlan2.42"
+*.accessPoint2.wlan[0].radio.displayCommunicationRange = false
+
+*.accessPoint3.numWlanInterfaces = 1
+*.accessPoint3.wlan[0].mgmt.ssid = "wlan2.43"
+*.accessPoint3.wlan[0].radio.displayCommunicationRange= false
+
+*.accessPoint4.numWlanInterfaces = 1
+*.accessPoint4.wlan[0].mgmt.ssid = "wlan2.44"
+*.accessPoint4.wlan[0].radio.displayCommunicationRange= false
+
+**.client1[*].numApps = 1
+**.client1[*].app[*].typename = "UdpVideoStreamClient"
+**.client1[*].app[*].serverAddress = "videoServer"
+**.client1[*].app[*].serverPort = 1000
+
+**.wirelessClient1[*].numApps = 1
+**.wirelessClient1[*].wlan[0].agent.defaultSsid = "wlan2.41"
+**.wirelessClient1[*].app[*].typename = "UdpVideoStreamClient"
+**.wirelessClient1[*].app[*].serverAddress = "videoServer"
+**.wirelessClient1[*].app[*].serverPort = 1000
+**.wirelessClient1[*].mobility.constraintAreaMinX = 300m
+**.wirelessClient1[*].mobility.constraintAreaMinY = 0m
+**.wirelessClient1[*].mobility.constraintAreaMaxX = 400m
+**.wirelessClient1[*].mobility.constraintAreaMaxY = 100m
+
+**.wirelessClient2[*].numApps = 1
+**.wirelessClient2[*].wlan[0].agent.defaultSsid = "wlan2.42"
+**.wirelessClient2[*].app[*].typename = "UdpVideoStreamClient"
+**.wirelessClient2[*].app[*].serverAddress = "videoServer"
+**.wirelessClient2[*].app[*].serverPort = 1000
+**.wirelessClient2[*].mobility.constraintAreaMinX = 100m
+**.wirelessClient2[*].mobility.constraintAreaMinY = 350m
+**.wirelessClient2[*].mobility.constraintAreaMaxX = 200m
+**.wirelessClient2[*].mobility.constraintAreaMaxY = 450m
+
+
+**.wirelessClient3[*].numApps = 1
+**.wirelessClient3[*].wlan[0].agent.defaultSsid = "wlan2.43"
+**.wirelessClient3[*].app[*].typename = "UdpVideoStreamClient"
+**.wirelessClient3[*].app[*].serverAddress = "videoServer"
+**.wirelessClient3[*].app[*].serverPort = 1000
+**.wirelessClient3[*].mobility.constraintAreaMinX = 450m
+**.wirelessClient3[*].mobility.constraintAreaMinY = 550m
+**.wirelessClient3[*].mobility.constraintAreaMaxX = 550m
+**.wirelessClient3[*].mobility.constraintAreaMaxY = 650m
+
+**.wirelessClient4[*].numApps = 1
+**.wirelessClient4[*].wlan[0].agent.defaultSsid = "wlan2.44"
+**.wirelessClient4[*].app[*].typename = "UdpVideoStreamClient"
+**.wirelessClient4[*].app[*].serverAddress = "videoServer"
+**.wirelessClient4[*].app[*].serverPort = 1000
+**.wirelessClient4[*].mobility.constraintAreaMinX = 800m
+**.wirelessClient4[*].mobility.constraintAreaMinY = 350m
+**.wirelessClient4[*].mobility.constraintAreaMaxX = 900m
+**.wirelessClient4[*].mobility.constraintAreaMaxY = 450m
+
+**.initialZ = 0m
+**.constraintAreaMinZ = 0m
+**.constraintAreaMaxZ = 0m
+
+[Config Scenario1_Hybrid_20]
+extends = HybridNetworkScenario1
+description = Hybrid Network with 10 Wired and 10 Mobile clients
+
+**.n1 = 10
+
+[Config Scenario1_Hybrid_30]
+extends = HybridNetworkScenario1
+description = Hybrid Network with 10 Wired and 20 Mobile clients
+
+**.n1 = 10
+**.n2 = 10
+
+[Config Scenario1_Hybrid_40]
+extends = HybridNetworkScenario1
+description = Hybrid Network with 10 Wired and 30 Mobile clients
+
+**.n1 = 10
+**.n2 = 30
+
+[Config Scenario1_Hybrid_50]
+extends = HybridNetworkScenario1
+description = Hybrid Network with 10 Wired and 40 Mobile clients
+
+**.n1 = 10
+**.n2 = 20
+**.n3 = 10
+
+[Config Scenario1_Hybrid_60]
+extends = HybridNetworkScenario1
+description = Hybrid Network with 10 Wired and 50 Mobile clients
+
+**.n1 = 10
+**.n2 = 20
+**.n3 = 20
+
+[Config Scenario1_Hybrid_70]
+extends = HybridNetworkScenario1
+description = Hybrid Network with 10 Wired and 60 Mobile clients
+
+**.n1 = 10
+**.n2 = 20
+**.n3 = 20
+**.n4 = 10
+
+[Config Scenario1_Hybrid_80]
+extends = HybridNetworkScenario1
+description = Hybrid Network with 10 Wired and 70 Mobile clients
+
+**.n1 = 10
+**.n2 = 20
+**.n3 = 20
+**.n4 = 20
+
+
+
+
