Updated scenario2 ini

--- a/simulations/nclients.ini
+++ b/simulations/nclients.ini
@@ -239,6 +239,59 @@ description = Hybrid Network with 10 Wired and 70 Mobile clients
 **.n3 = 20
 **.n4 = 20
 
+[Config HybridNetworkScenario2]
+network = HybridNetworkScenario2
+
+**.addDefaultRoutes = false
+
+*.accessPoint4.numWlanInterfaces = 1
+*.accessPoint4.wlan[0].mgmt.ssid = "wlan2.44"
+*.accessPoint4.wlan[0].radio.displayCommunicationRange= false
+
+**.client1[*].numApps = 1
+**.client1[*].app[*].typename = "UdpVideoStreamClient"
+**.client1[*].app[*].serverAddress = "videoServer"
+**.client1[*].app[*].serverPort = 1000
+
+**.client2[*].numApps = 1
+**.client2[*].app[*].typename = "UdpVideoStreamClient"
+**.client2[*].app[*].serverAddress = "videoServer"
+**.client2[*].app[*].serverPort = 1000
+
+**.client3[*].numApps = 1
+**.client3[*].app[*].typename = "UdpVideoStreamClient"
+**.client3[*].app[*].serverAddress = "videoServer"
+**.client3[*].app[*].serverPort = 1000
+
+
+**.wirelessClient4[*].numApps = 1
+**.wirelessClient4[*].wlan[0].agent.defaultSsid = "wlan2.44"
+**.wirelessClient4[*].app[*].typename = "UdpVideoStreamClient"
+**.wirelessClient4[*].app[*].serverAddress = "videoServer"
+**.wirelessClient4[*].app[*].serverPort = 1000
+**.wirelessClient4[*].mobility.constraintAreaMinX = 800m
+**.wirelessClient4[*].mobility.constraintAreaMinY = 350m
+**.wirelessClient4[*].mobility.constraintAreaMaxX = 900m
+**.wirelessClient4[*].mobility.constraintAreaMaxY = 450m
+
+**.initialZ = 0m
+**.constraintAreaMinZ = 0m
+**.constraintAreaMaxZ = 0m
+
+
+[Config Scenario2_Hybrid_10]
+extends = HybridNetworkScenario2
+description = Hybrid Network with 60 Wired and 10 Mobile clients
+
+**.n4 = 10
+
+[Config Scenario2_Hybrid_20]
+extends = HybridNetworkScenario2
+description = Hybrid Network with 60 Wired and 20 Mobile clients
+
+**.n4 = 20
+
+
 
 
 
